@@ -16,6 +16,7 @@
             Removed modulo on `new Date` h/m/s/ms arguments as it seems desktop JS is fine with out of range values
             Added `active` option to NRF.setScan/findDevices/requestDevices to allow scan response packets to be requested
             Add I2C/SPI baud rate checks (#1619)
+            Add `E.setRTCPrescaler` to allow the RTC to be calibrated on Espruino Pico (fix #1607)
 
      2v01 : ESP32: update to esp-idf V3.1
             Fix issues with Class Extends
